Various fixes: Fix horizontal overflow in homepage, add protected page manageorders.html

--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 
 .navbar {
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   display: flex;
   justify-content: center;
@@ -45,7 +44,7 @@
 
 .content {
   height: 90vh;
-  width: 100vw;
+  width: 100%;
   background: url(images/background.jpg) center;
   background-size: cover;
   
@@ -71,7 +70,7 @@
 /* order section */
 
 .order_container {
-  width: 100vw;
+  width: 100%;
   height: 55vh;
   background-color: aliceblue;
 
@@ -108,7 +107,7 @@
 /* more info section */
 
 .container{
-  width: 100vw;
+  width: 100%;
   display: flex;
 
 }
@@ -145,4 +144,10 @@
   border-radius: 1rem;
   cursor: pointer;
   color: white;
+}
+
+/* login section */
+
+#login_title {
+  margin-bottom: 1rem;
 }
